--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,11 @@
       <!-- <h1>Hasil</h1> -->
       <table>
         <tr>
+          <td colspan="2">
+            <p id="kota">Memproses..</p>
+          </td>
+        </tr>
+        <tr>
           <td><img src="../static/css/image/temperature.png"></td>
           <td><p id="suhu">Memproses..</p></td>
         </tr>
@@ -73,53 +78,59 @@
                  console.log(response)
                  console.log("Memproses...")
                  // $('#dataText').empty()
+                 $('#kota').html(response.kota)
                  $('#hasil').html(response.sentence)
                  $('#suhu').html(response.suhu)
                  $('#hujan').html(response.hujan)
                  $('#kelembaban').html(response.kelembaban)
                  $('#angin').html(response.angin)
                  $('#waktu').html(response.waktu)
-                 console.log(response.waktu)
-                 countDownDate = new Date(response.waktu).getTime();
+                 // console.log(response.waktu)
+                 countDownDate = new Date(response.waktu).getTime()
+                 // countDownDate = new Date("Nov 28, 2018 14:31:25").getTime()
+
+                 //opsi jika diminta waktu posting kurang dari 3 jam
+                 // now = new Date();
+                 // countDownDate = now.setMinutes(now.getMinutes() + 1);
+                 // console.log(countDownDate)
                  
               },failed: function(response){
                 console.log(response)
                 console.log("Proses Gagal...")
               }
-            });
+           });
+        }
+        get_data();
+        var x = setInterval(function() {
+          if (countDownDate != null) {
+              // Get todays date and time
+            var now = new Date().getTime();
+
+            // Find the distance between now and the count down date
+            var distance = countDownDate - now;
+            // console.log(countDownDate)
+
+            // Time calculations for days, hours, minutes and seconds
+            var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            // Display the result in the element with id="demo"
+            document.getElementById("demo").innerHTML = hours + "h "
+            + minutes + "m " + seconds + "s ";
+
+            // If the count down is finished, write some text 
+            if (distance == 0) {
+              location.reload()  
+            }
           }
-          get_data();
-          var x = setInterval(function() {
-            if (countDownDate !== null) {
-                // Get todays date and time
-              var now = new Date().getTime();
+        }, 1000);
 
-              // Find the distance between now and the count down date
-              var distance = countDownDate - now;
-              console.log(countDownDate)
-
-              // Time calculations for days, hours, minutes and seconds
-              var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-              var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-              var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-              var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-              // Display the result in the element with id="demo"
-              document.getElementById("demo").innerHTML = hours + "h "
-              + minutes + "m " + seconds + "s ";
-
-              // If the count down is finished, write some text 
-            }
-            if (distance = 0) {
-              get_data()
-            }
-          }, 1000);
-
-
-          //jika diminta update data setiap 60 detik sekali
-          // setInterval(function(){
-          //   get_data()
-          // }, 60000)
+        // jika diminta update data setiap 60 detik sekali
+        // setTimeout(function(){
+        //   location = ''
+        // }, 60000)
       });
       console.log("aaa")
     </script>
