reload if hour > 3

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
             + minutes + "m " + seconds + "s ";
 
             // If the count down is finished, write some text 
-            if (distance == 0 || distance > 3) {
+            if (distance == 0 || hours > 3) {
               location.reload()  
             }
           }
